force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The name of the city</description>
    <inlineHelpText>Enter the name of the city</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>