force-app/main/default/objects/Location__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>The name of the landmark.</description>
    <inlineHelpText>Enter the name of the landmark.</inlineHelpText>
    <label>Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>