force-app/main/default/objects/Location__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Location is verified.</description>
    <inlineHelpText>Check if the Location is verified.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>